--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,67 @@
 body {
-    background: burlywood;
-    text-align: center;
+    background-color: #9daffc;
+    font-family:Georgia, 'Times New Roman', Times, serif
+}
+
+a {
+  color: rgb(99, 121, 218);
+}
+.container {
+  margin: 120px auto;
+  max-width: 600px;
+}
+
+header {
+  margin-bottom: 30px;
+}
+
+h1 {
+  text-align: center;
+  font-weight: 800;
+  font-size: 36px;
+  line-height: 2.0;
+  color: black;
+}
+
+form {
+  padding: 30px;
+  background-color: rgb(99, 121, 218);
+  border-radius: 10px;
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.instructions {
+  padding: 16px;
+  border: 1px solid rgb(99, 121, 218);
+  width: 80%;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 20px;
+  color: #9daffc;
+}
+
+.submit-button {
+  margin-left: 10px;
+  background-color: #9daffc;
+  color: white;
+  border: 1px solid rgb(99, 121, 218);  
+  width: 150px;
+  font-size: 16px;
+  border-radius: 50px;
+  padding: 14px 24px;
+}
+
+.activity {
+  font-size: 14px;
+  background-color: rgb(99, 121, 218);
+  padding: 20px;
+  line-height: 2;
+  border-left: 5px solid black;
+}
+
+footer {
+  text-align: center;
+  font-size: 12.5px;
+  margin-top: 30px;  
 }
