--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,7 @@ form {
 
 .instructions {
   padding: 16px;
+  border: 1px solid rgb(99, 121, 218);
   width: 80%;
   font-size: 16px;
   border-radius: 50px;
